--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png">
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -35,7 +35,7 @@
             </nav>
           </div>
           <span class="seekhunt-mobile-title mdl-layout-title">
-            <img class="seekhunt-logo-image" src="assets/images/seekhunt.png">
+            <img class="seekhunt-logo-image" src="assets/images/seekhuntpng">
           </span>
         </div>
       </div>
@@ -53,15 +53,15 @@
         <a name="top"></a>
         <div class="seekhunt-welcome-section mdl-typography--text-center">
           <div class="logo-font seekhunt-slogan">A new way to résumé.</div>
-          <div class="logo-font seekhunt-sub-slogan">Welcome to SeekHunt. Show the world what you're capable of.</div>
 
           <div class="login-page">
             <div class="form">
-              <form class="login-form">
+              <form class="register-form">
                 <input type="text" placeholder="username"/>
                 <input type="password" placeholder="password"/>
-                <button>login</button>
-                <p class="message">Not registered? <a href="signup.html">Create an account</a></p>
+                <input type="password" placeholder="confirm password"/>
+                <button>create</button>
+                <p class="message">Already registered? <a href="index.html">Sign In</a></p>
               </form>
             </div>
           </div>
