started working on login page and sign up page functionality

--- a/profile.html
+++ b/profile.html
@@ -50,25 +50,7 @@
         </nav>
       </div>
 
-      <div class="seekhunt-content mdl-layout__content">
-        <a name="top"></a>
-        <div class="seekhunt-welcome-section mdl-typography--text-center">
-          <div class="logo-font seekhunt-slogan">A new way to résumé.</div>
-
-          <div class="login-page">
-            <div class="form">
-              <form class="register-form">
-                <input id="username" type="text" placeholder="username"/>
-                <input id="password"type="password" placeholder="password"/>
-                <input id="confirm" type="password" placeholder="confirm password"/>
-                <button id="signup">create</button>
-                <p class="message">Already registered? <a href="index.html">Sign In</a></p>
-              </form>
-            </div>
-          </div>
-
-        </div>
-  
+      <div id="root"></div>
 
         <footer class="seekhunt-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
