--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="assets/images/favicon.ico">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -58,9 +59,9 @@
           <div class="login-page">
             <div class="form">
               <form class="login-form">
-                <input type="text" placeholder="username"/>
-                <input type="password" placeholder="password"/>
-                <button>login</button>
+                <input id="username" type="text" placeholder="username">
+                <input id="password" type="password" placeholder="password">
+                <button id="login">login</button>
                 <p class="message">Not registered? <a href="signup.html">Create an account</a></p>
               </form>
             </div>
@@ -84,5 +85,6 @@
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="authentication/login.js"></script>
   </body>
 </html>
