--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
   
 
         <footer class="seekhunt-footer mdl-mega-footer">
-          <div id='root'></div>
-          <script src='build/bundle.js'></script>
           <div class="mdl-mega-footer--top-section">
             <div class="mdl-mega-footer--right-section">
               <a class="mdl-typography--font-light" href="#top">
@@ -87,6 +85,6 @@
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="authentication/login.js"></script>
+    <script src="server/login.js"></script>
   </body>
 </html>
