--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,10 @@
         </nav>
       </div>
 
-      <div id="root"></div>
+      <div class="seekhunt-content mdl-layout__content">
+        <a name="top"></a>
+        
+        <div id="root"></div>
 
         <footer class="seekhunt-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
@@ -67,5 +70,6 @@
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
