--- a/signup.html
+++ b/signup.html
@@ -85,5 +85,6 @@
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="server/signup.js"></script>
   </body>
 </html>
