fixed login issues

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <div class="seekhunt-navigation-container">
             <nav class="seekhunt-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Profiles</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="signup.html">Sign up</a>
             </nav>
           </div>
           <span class="seekhunt-mobile-title mdl-layout-title">
@@ -47,6 +48,7 @@
         </span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="">Profiles</a> 
+          <a class="mdl-navigation__link" href="signup.html">Sign up</a> 
         </nav>
       </div>
 
