--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" type="image/png" href="../assets/images/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
@@ -18,7 +18,7 @@
       <div class="seekhunt-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="seekhunt-title mdl-layout-title">
-            <a href="../index.html"><img class="seekhunt-logo-image" src="../assets/images/seekhuntgray.png"></a>
+            <a href="index.html"><img class="seekhunt-logo-image" src="assets/images/seekhuntgray.png"></a>
           </span>
           <div class="seekhunt-header-spacer mdl-layout-spacer"></div>
           <div class="seekhunt-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
@@ -33,29 +33,44 @@
           <div class="seekhunt-navigation-container">
             <nav class="seekhunt-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Profiles</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="../signup.html">Sign up</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="signup.html">Sign up</a>
             </nav>
           </div>
           <span class="seekhunt-mobile-title mdl-layout-title">
-            <img class="seekhunt-logo-image" src="../assets/images/seekhunt.png">
+            <img class="seekhunt-logo-image" src="assets/images/seekhunt.png">
           </span>
         </div>
       </div>
 
       <div class="seekhunt-drawer mdl-layout__drawer">
         <span class="mdl-layout-title">
-          <img class="seekhunt-logo-image" src="../assets/images/seekhunt.png">
+          <img class="seekhunt-logo-image" src="assets/images/seekhunt.png">
         </span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="">Profiles</a> 
-          <a class="mdl-navigation__link" href="../signup.html">Sign up</a> 
+          <a class="mdl-navigation__link" href="signup.html">Sign up</a> 
         </nav>
       </div>
 
       <div class="seekhunt-content mdl-layout__content">
         <a name="top"></a>
-        
-        <div id="root"></div>
+        <div class="seekhunt-welcome-section mdl-typography--text-center">
+          <div class="logo-font seekhunt-slogan">404 Error</div>
+          <div class="logo-font seekhunt-sub-slogan">Oh no! You have found our junior developer's homepage.</div>
+
+          <div class="login-page">
+            <div class="form">
+              <form class="login-form">
+                <input id="username" type="text" placeholder="username">
+                <input id="password" type="password" placeholder="password">
+                <button id="login">login</button>
+                <p class="message">Not registered? <a href="signup.html">Create an account</a></p>
+              </form>
+            </div>
+          </div>
+
+        </div>
+  
 
         <footer class="seekhunt-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
@@ -72,6 +87,6 @@
       </div>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="../build/bundle.js"></script>
+    <script src="server/login.js"></script>
   </body>
 </html>
