Added some comments

--- a/profile.html
+++ b/profile.html
@@ -55,14 +55,17 @@
 
       <div class="mdl-demo seekhunt-content mdl-layout__content">
         <a name="top"></a>
-        
-        <!--<div id="root"></div>-->
 
 
         <div class="mdl-layout__tab-panel is-active" id="overview">
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <div class="mdl-card mdl-cell mdl-cell--12-col">
+
+
+              <!--This is where ReactJS is rendered-->
               <div id="root"></div>
+
+
           </section>
         </div>
 
